--- a/src/main/resources/templates/email-mensaje.html
+++ b/src/main/resources/templates/email-mensaje.html
@@ -44,7 +44,7 @@
                     <td style="background-color:#eaf7ea; border-left:4px solid #238c3e; padding:18px 16px; color:#333333; font-size:14px;">
                         <table width="100%" cellpadding="0" cellspacing="0">
                             <tr valign="top">
-                                <td width="50" style="border: 1px solid black;">
+                                <td width="50">
                                     <div style="min-width:40px; max-width:40px; min-height:40px; max-height:40px; background:#238c3e; border-radius:50%; text-align:center; line-height:40px; font-size:20px; font-weight:bold; color:#ffffff; font-family:Arial, sans-serif;"
                                          th:text="${letra}">
                                         L
